--- a/templates/auctions/item_detail.html
+++ b/templates/auctions/item_detail.html
@@ -38,8 +38,7 @@
         <div class="">
           <div class="form-group">
             <label for="amount"
-              >Amount Must be in <strong>{{item.min_price}} RWF</strong> and 
-              <strong> {{item.max_price}} RWF</strong>
+              >Amount Must be greater than <strong>{{bid.amount}} RWF</strong>
             </label>
             <input
               class="form-control"
