--- a/templates/auctions/item_detail.html
+++ b/templates/auctions/item_detail.html
@@ -38,7 +38,8 @@
         <div class="">
           <div class="form-group">
             <label for="amount"
-              >Amount Must be greater than <strong>{{bid.amount}} RWF</strong>
+              >Amount Must be less or equal to
+              <strong> {{item.max_price}} RWF</strong>
             </label>
             <input
               class="form-control"
