--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -1,5 +1,5 @@
 {% extends "../base.html" %} {% load static %} {% block title %} Reset Password
-{%endblock title %} 
+{%endblock title %}
 
 {% block content %}
 {% if error_message %}
@@ -8,30 +8,52 @@
 </div>
 {% endif %}
 <div class="container-login">
-  <div
-    class="form-side"
-    data-aos="fade-down"
-    data-aos-delay="200"
-    data-aos-duration="1000"
-  >
-    <div class="form-title">
-      <p>
-        Provide your own Phone Number.
-      </p>
-    </div>
-    <div class="form-body">
+  <div class="form-side" data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000">
+    <div class="form-body col-lg-5 m-auto">
       <form method="post">
         {% csrf_token %}
 
-        <div class="field-group">
+        <!-- <div class="field-group">
           <input type="tel" name="phone_number" id="phone_number" placeholder="Phone Number(+250)" required />
+        </div> -->
+
+        <div class="card-body">
+          <form method="POST">
+            {% csrf_token %}
+            <div class="form-row">
+              <div class="col-md-10 offset-md-1">
+                <div class="form-group">
+                  <label class="small mb-1" for="id_email">Email</label>
+                  <input type="email" name="email" autocomplete="email" class="form-control" required id="id_email"
+                    placeholder="Enter email" />
+                  <span>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-10 offset-md-1">
+                <div class="form-group mt-0 mb-1">
+                  <button type="submit" class="col-md-12 btn btn-dark" id="reset">Reset Now</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col-md-10 offset-md-1">
+                <div class="form-group mt-0 mb-1 tetx-right">
+                  <a class="reset-link" href="{% url 'login' %}">Sign In <i class="bi bi-arrow-right"></i> </a>
+                </div>
+              </div>
+            </div>
+
+          </form>
+
         </div>
 
-        <button type="submit" class="btn">Reset Now</button>
       </form>
-    </div> 
+    </div>
   </div>
-      <a class="reset-link" href="{% url 'login' %}">Sign In <i class="bi bi-arrow-right"></i> </a> 
 </div>
 {% endblock content %} {% block scripts %}
 <script src="{% static 'js/login.js' %}" defer></script>
