--- a/templates/users/password_reset_complete.html
+++ b/templates/users/password_reset_complete.html
@@ -1,12 +1,13 @@
-{% extends "users/base.html" %}
+{% extends "../base.html" %} {% load static %} {% block title %} Password Reset Successfully
+{%endblock title %}
 {% block content %}
     <div class="container my-3 p-3">
         <div class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                    <div class="alert alert-info">
+                    <p class="text-bold">
                         Your password has been set. You may go ahead and <a href="{% url 'login' %}">Login Here</a>
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
