--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -1,5 +1,5 @@
-{% extends "users/base.html" %}
-{% block title %} Password Reset {% endblock title%}
+{% extends "../base.html" %} {% load static %} {% block title %} Set a new password
+{%endblock title %}
 {% block content %}
     <div class="form-content my-3 p-3">
         <div class="container">
